  - for camera mode, adjust the user interface to show these informations and allow to easily reset to a default position by pressing the plunger key.
- change camera mode buttons to match the ones when starting VPX with -povedit (Start = Export POV, Credit = Reset/Quit, Plunger = Defaults)

FIXES:

- fix analogue nudge not working for joysticks/gamepads in XInput mode

- fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player

- reflections now work in the interactive camera/light editing mode (F6) as well

- fix overbrightness in F6 (interactive camera/light editing) mode

- fix swapped red & blue channels when exporting from BMPs

- handle broken tables better and try to load as much as possible

- static element preprocessing is now done on the GPU (which leads to a faster VPX-player start)
- increase preprocessing sample rate for the static parts of the table

- cleanup Light Debugger dialog and fix 2nd color button

- improve script editing performance again

- improve mouse cursor hide/unhide in (windowed) fullscreen

- fix 'O'-key ball debugging

- fix crash if sound card(s) hardware/driver setup changed

- update example tables with new raytraced ball shadows enabled
- add better wood texture

- update FreeImage library to latest 3.18.0 (custom build) (currently disabled)
- DirectX 8 port for input handling (currently disabled)

- see Changelog_Scripts.txt for the respective core script changes (version 3.60)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes
- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

VP 10.7.4 Changelog
------------------------

FEATURES:

- add native ball shadows for bulb lights

FIXES:

- fix analogue nudge not working for joysticks/gamepads in XInput mode
