@@ -235,13 +235,26 @@ void main()
 		edge*(6.0*1.0/0.4)-(6.0*0.6/0.4) :
 		0.0;
 
-    const float2 uv0 = float2(0.5 - r.x*m, 0.5 - r.y*m);
-    float3 ballImageColor = texture(tex_ball_color, uv0).xyz;
+    float3 ballImageColor;
+    if (%PARAM0%) // equirectangularMap
+    { // Equirectangular Map Reflections
+      const float3 rv = (matWorldViewInverse * vec4(r.x, r.y, r.z, 0.)).xyz; // mul_w0(r, matWorldViewInverse);
+      //const float2 uv = float2(0.5 + atan(rv.y, rv.x) * (0.5 / PI) + 0.5, 0.5 + rv.z * 0.5);
+      const float2 uv = float2(0.5 + atan(rv.y, rv.x) * (0.5 / PI) + 0.5, 0.5 + asin(rv.z) / PI);
+      ballImageColor = textureLod(tex_ball_color, uv, lod).xyz;
+    }
+    else
+    { // Spherical Map Reflections
+      // calculate the intermediate value for the final texture coords. found here http://www.ozone3d.net/tutorials/glsl_texturing_p04.php
+      const float m = (r.z + 1.0 > 0.) ? 0.3535533905932737622 * rsqrt(r.z + 1.0) : 0.; // 0.353...=0.5/sqrt(2)
+      const float2 uv = float2(0.5 - r.x * m, 0.5 - r.y * m);
+      ballImageColor = textureLod(tex_ball_color, uv, lod).xyz;
+    }
 
     const float4 decalColorT = texture(tex_ball_decal, float2(normal_t0x.w, worldPos_t0y.w));
     float3 decalColor = decalColorT.xyz;
 
-    if (!%PARAM0%) // decalMode
+    if (!%PARAM1%) // decalMode
     {
        // decal texture is an alpha scratch texture and must be added to the ball texture
        // the strength of the scratches totally rely on the alpha values.
@@ -257,7 +270,7 @@ void main()
        return;
     }
 
-    if (!%PARAM0%) // decalMode
+    if (!%PARAM1%) // decalMode
        ballImageColor *= fenvEmissionScale_TexWidth.x;
     else
        ballImageColor *= 0.5*fenvEmissionScale_TexWidth.x; //!! 0.5=magic
@@ -291,13 +304,13 @@ void main()
 
     float3 diffuse = cBase_Alpha.xyz*0.075;
 
-    if(!%PARAM0%) // decalMode
+    if(!%PARAM1%) // decalMode
        diffuse *= decalColor; // scratches make the material more rough
 
     const float3 glossy = max(diffuse*2.0, float3(0.1,0.1,0.1)); //!! meh
     float3 specular = playfieldColor*cBase_Alpha.xyz; //!! meh, too, as only added in ballLightLoop anyhow
 
-    if(!%PARAM0%)
+    if(!%PARAM1%)
        specular *= float3(1.,1.,1.)-decalColor; // see above
 
    color.xyz = ballLightLoop(worldPos_t0y.xyz, normal_t0x.xyz, /*camera=0,0,0,1*/-worldPos_t0y.xyz, diffuse, glossy, specular, 1.0, false);
@@ -334,7 +347,9 @@ void main()
 
 ////TECHNIQUES
 
-RenderBall:P0:vsBall():gsBall():psBall(false)
-RenderBall_DecalMode:P0:vsBall():gsBall():psBall(true)
+RenderBall:P0:vsBall():gsBall():psBall(true, false)
+RenderBall_DecalMode:P0:vsBall():gsBall():psBall(true, true)
+RenderBall_SphericalMap:P0:vsBall():gsBall():psBall(false, false)
+RenderBall_SphericalMap_DecalMode:P0:vsBall():gsBall():psBall(false, true)
 //RenderBallReflection:P0:vsBallReflection():psBallReflection()
 RenderBallTrail:P0:vsBallTrail():gsBallTrail():psBallTrail()
